# obs-super-suite

./: .gitignore  CMakeLists.txt  README.md  TODO.md  buildspec.json  resources.qrc
cmake/: FindWebView2.cmake
data/locale/: en-US.ini
docs/: COMPONENTS.md
src/: asio_config.cpp  asio_config.h  asio_settings.cpp  asio_settings.h  asio_source_dialog.cpp  asio_source_dialog.h  channels_view.cpp  channels_view.h  mixer_channel.cpp  mixer_channel.h  mixer_dock.cpp  mixer_dock.h  module.cc  module.hh  plugin-main.c  plugin-support.c.in  plugin-support.h  plugin-version.h  plugin-version.h.in  super_suite.cpp  super_suite.h
src/browsers/backends/: base.hpp  edge_webview2.cpp  edge_webview2.hpp  obs_browser_cef.cpp  obs_browser_cef.hpp  standalone_cef.cpp  standalone_cef.hpp
src/components/: daw_mixer_channel.cpp  daw_mixer_channel.hpp  mixer_channel.cpp  mixer_channel.h  mixer_meter.cpp  mixer_meter.hpp  qwebviewx.cpp  qwebviewx.hpp
src/dialogs/: audio_channels.cpp  audio_channels.h  audio_channels_support.cpp  audio_channels_support.h  audio_source_dialog.cpp  audio_source_dialog.h  browser_manager.cpp  browser_manager.h  canvas_manager.cpp  canvas_manager.h  channels_viewer.cpp  channels_viewer.h  encoders_viewer.cpp  encoders_viewer.h  encoding_graph_dialog.cpp  encoding_graph_dialog.h  outputs_viewer.cpp  outputs_viewer.h
src/docks/: advanced_monitoring_dock.cpp  advanced_monitoring_dock.hpp  browser-dock.cpp  browser-dock.hpp  daw_mixer_demo_dock.cpp  daw_mixer_demo_dock.hpp  mixer_dock.cpp  mixer_dock.h  s_mixer_demo_dock.cpp  s_mixer_demo_dock.hpp  sourcerer_item.cpp  sourcerer_item.hpp  sourcerer_scenes_dock.cpp  sourcerer_scenes_dock.hpp  sourcerer_sources_dock.cpp  sourcerer_sources_dock.hpp  test_midi_dock.cpp  test_midi_dock.hpp  test_super_dock.cpp  test_super_dock.hpp  volume_meter_demo_dock.cpp  volume_meter_demo_dock.hpp  wrapper_test_dock.cpp  wrapper_test_dock.h
src/docks/sourcerer/: sourcerer_item.cpp  sourcerer_item.hpp  sourcerer_scenes_dock.cpp  sourcerer_scenes_dock.hpp  sourcerer_sources_dock.cpp  sourcerer_sources_dock.hpp
src/lib/: handle.hxx  obs.cxx  obs.hxx  traits.hxx
src/models/: audio_channel_source_config.cpp  audio_channel_source_config.h
src/super/core/: animation.cpp  animation.hpp  control_filters.hpp  control_port.cpp  control_port.hpp  control_registry.cpp  control_registry.hpp  control_types.hpp  control_variable.cpp  control_variable.hpp  standard_filters.hpp  undo_manager.hpp
src/super/dev/debugger/: debug_monitor.hpp
src/super/dev/packager/: package_manager.hpp
src/super/hal/: hardware_profile.hpp
src/super/io/: midi_adapter.cpp  midi_adapter.hpp
src/super/modules/graph/: graph_node.cpp  graph_node.hpp  standard_nodes.hpp
src/super/modules/scripting/: lua_engine.cpp  lua_engine.hpp
src/super/modules/time/: master_clock.hpp
src/super/ui/: control_assign_popup.cpp  control_assign_popup.hpp  control_assign_popup_dialog.cpp  super_widget.cpp  super_widget.hpp
src/super/ui/components/: s_mixer_control_bar.cpp  s_mixer_control_bar.hpp  s_mixer_db_label.cpp  s_mixer_db_label.hpp  s_mixer_effects_rack.cpp  s_mixer_effects_rack.hpp  s_mixer_fader.cpp  s_mixer_fader.hpp  s_mixer_filter_controls.cpp  s_mixer_filter_controls.hpp  s_mixer_filter_property_widget.cpp  s_mixer_filter_property_widget.hpp  s_mixer_meter.cpp  s_mixer_meter.hpp  s_mixer_name_bar.cpp  s_mixer_name_bar.hpp  s_mixer_pan_slider.cpp  s_mixer_pan_slider.hpp  s_mixer_props_selector.cpp  s_mixer_props_selector.hpp  s_mixer_sends_panel.cpp  s_mixer_sends_panel.hpp  s_mixer_side_panel.cpp  s_mixer_side_panel.hpp  s_mixer_sidebar_toggle.cpp  s_mixer_sidebar_toggle.hpp  s_mixer_switch.cpp  s_mixer_switch.hpp
src/super/ui/surface/: virtual_surface.cpp  virtual_surface.hpp
src/super/ui/widgets/: s_mixer_channel.cpp  s_mixer_channel.hpp  s_mixer_dock.cpp  s_mixer_dock.hpp
src/utils/: browser-panel.hpp  color.cpp  color.hpp  macros.h  persistable_widget.cpp  persistable_widget.hpp  qcef_helper.cpp  qcef_helper.hpp  tweaks_impl.cpp  tweaks_impl.hpp  volume_meter.cpp  volume_meter.hpp  widget_docker.cpp  widget_docker.hpp
src/utils/extras/: frontend_helper.cpp  frontend_helper.hpp  frontend_tweaks.cpp  frontend_tweaks.hpp  libobs_tweaks.cpp  libobs_tweaks.hpp
src/utils/midi/: midi_backend.cpp  midi_backend.hpp  midi_control_popup.cpp  midi_control_popup.hpp  midi_router.cpp  midi_router.hpp  winmm_midi_backend.cpp  winmm_midi_backend.hpp
src/utils/widgets/: double-slider.cpp  double-slider.hpp  flow_layout.cpp  flow_layout.hpp  projector.cpp  projector.hpp  qt-display.cpp  qt-display.hpp  slider-ignore-scroll.cpp  slider-ignore-scroll.hpp
src/windows/: audio_matrix.cpp  audio_matrix.hpp  dock_window_manager.cpp  dock_window_manager.h  encoding_graph_window.cpp  encoding_graph_window.h  graph_editor_window.cpp  graph_editor_window.hpp  qt_inspector.cpp  qt_inspector.hpp  secondary_window.cpp  secondary_window.h  surface_editor_window.cpp  surface_editor_window.hpp  tweaks_panel.cpp  tweaks_panel.hpp
